Add home page and basic styling

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>SorterApp</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
+  <head>
+    <title>SorterApp</title>
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+    <%= csrf_meta_tags %>
+  </head>
+  <body>
+    <header class="header">
+      <h1>Sorter App 0.1</h1>
 
-<%= yield %>
+      <nav class="nav">
+        <ul>
+          <li><%= link_to "Home", root_path %></li>
+        </ul>
+      </nav>
+    </header>
 
-</body>
+    <main class="main">
+
+      <%= yield %>
+
+    </main>
+
+  </body>
 </html>
