--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -1,3 +1,12 @@
+// 1. GLOBAL
+$text: rgb(44, 62, 80);
+$primary: rgb(44, 62, 80);
+
+
+///////////////////////////////////////////////////////////////////////////////
+
+// 2. GENERIC
+// ( resets )
 // http://jaydenseric.com/blog/forget-normalize-or-resets-lay-your-own-css-foundation
 
 html {
@@ -63,4 +72,56 @@ img {
     max-width: 100%;
     height: auto;
     border: 0;
+}
+
+// 3. TYPOGRAPHY
+* {
+  font-family: Helvetica, sans-serif;
+  color: $text;
+}
+h1 {
+  font-size: 3em;
+}
+
+// 4. BASE ELEMENTS
+
+* {
+  box-sizing: border-box;
+}
+
+// 5. SECTIONS
+
+// 5.1 NAV
+.header {
+  text-align: center;
+  padding: 20px 0;
+}
+
+.nav {
+  padding: 20px 0;
+}
+
+
+// 5.2 MAIN
+.main {
+  max-width: 600px;
+  margin: 0 auto;
+}
+
+.footer {
+
+}
+
+// 6. MODULES
+.btn {
+  font-size: 1em;
+  border-radius: 10px;
+  padding: 10px;
+  cursor: pointer;
+  border: 1px solid $primary;
+  color: $primary;
+  background: white;
+}
+.btn:hover {
+  text-decoration: none;
 }
