--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,9 @@
   </head>
   <body>
     <header class="header">
+      <div class="header__user">
+        Logged in as:
+      </div>
       <h1>Sorter App 0.1</h1>
 
       <nav class="nav">
