--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,25 @@
 <h2>Sign up</h2>
 <p>Find me in app/views/users/new.html.erb</p>
+
+<%= form_for @user do |f| %>
+
+<fieldset>
+  <%= f.label :email, :class => 'label' %>
+  <%= f.email_field :email, :required => true %>
+</fieldset>
+
+<fieldset>
+  <%= f.label :password %>
+  <%= f.password_field :password, :required => true %>
+</fieldset>
+
+<fieldset>
+  <%= f.label :password_confirmation %>
+  <%= f.password_field :password_confirmation, :required => true %>
+</fieldset>
+
+<fieldset>
+  <%= f.submit "Sign up" %>
+</fieldset>
+
+<% end %>
