Custom label for password confirmation

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -14,7 +14,7 @@
 </fieldset>
 
 <fieldset>
-  <%= f.label :password_confirmation, :class => 'label' %>
+  <%= f.label :password_confirmation, "Confirm", :class => 'label' %>
   <%= f.password_field :password_confirmation, :required => true, :class => 'input' %>
 </fieldset>
 
