--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -77,6 +77,15 @@ h1 {
   font-size: 3em;
   padding: 5px 0;
 }
+
+h2 {
+  font-size: 2em;
+  padding: 5px 0;
+}
+p {
+  font-size: 1em;
+  padding: 5px 0;
+}
 // 4. BASE ELEMENTS
 * {
   box-sizing: border-box;
@@ -100,7 +109,13 @@ h1 {
   max-width: 600px;
   margin: 0 auto;
 }
-.footer {}
+.main__heading {
+  text-align: center;
+}
+.main__subheading {
+  text-align: center;
+}
+
 // 6. MODULES
 .btn {
   font-size: 1em;
