--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,9 @@
-<h2>Sign up</h2>
-<p>Find me in app/views/users/new.html.erb</p>
+<div class="main__heading">
+  <h2>Sign up</h2>
+</div>
+<div class="main__subheading">
+  <p>Find me in app/views/users/new.html.erb</p>
+</div>
 
 <%= form_for @user, :html => {:class => 'form'} do |f| %>
 
