Fix form error styling

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -140,6 +140,9 @@ fieldset {
   border: none;
   padding: 10px 0;
 }
+.field_with_errors {
+  display: inline;
+}
 .input {
   display: inline-block;
   width: 50%;
