--- a/app/views/session/new.html.erb
+++ b/app/views/session/new.html.erb
@@ -1,2 +1,24 @@
-<h1>Session#new</h1>
-<p>Find me in app/views/session/new.html.erb</p>
+<div class="main__heading">
+  <h2>Login</h2>
+</div>
+<div class="main__subheading">
+  <p>Find me in app/views/session/new.html.erb</p>
+</div>
+
+<%= form_tag login_path, :class => 'form' do %>
+
+<fieldset>
+  <%= label_tag :email, nil, :class => 'label' %>
+  <%= text_field_tag :email, nil, :class => 'input' %>
+</fieldset>
+
+<fieldset>
+  <%= label_tag :password, nil, :class => 'label' %>
+  <%= password_field_tag :password, nil, :class => 'input' %>
+</fieldset>
+
+<fieldset class="text-center">
+  <%= submit_tag 'Login', :class => 'btn' %>
+</fieldset>
+
+<% end %>
