--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,11 @@
-<h2>Home Page</h2>
+<div class="main__heading">
+  <h2>Home Page</h2>
+</div>
+
+<div class="main__subheading">
+  <p>Find me in app/views/pages/home.html.erb</p>
+</div>
+
+<% if @current_user.present? %>
+<p>You are logged in as: <%= @current_user.email %></p>
+<% end %>
