--- a/app/views/session/new.html.erb
+++ b/app/views/session/new.html.erb
@@ -5,6 +5,13 @@
   <p>Find me in app/views/session/new.html.erb</p>
 </div>
 
+<!--  Display error from login fail (redirect from login `else`)-->
+<% if flash[:error].present? %>
+<h3 class="login__error-heading">
+  <%= flash[:error] %>
+</h3>
+<% end %>
+
 <%= form_tag login_path, :class => 'form' do %>
 
 <fieldset>
