Different home page options for logged in status

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -135,6 +135,10 @@ p {
 .main__subheading {
   text-align: center;
 }
+.main-section {
+  text-align: center;
+  margin: 2em 0;
+}
 
 // OTHER
 .login__error-heading {
