--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,6 +6,24 @@
   <p>Find me in app/views/pages/home.html.erb</p>
 </div>
 
+<section class="main-section">
+
 <% if @current_user.present? %>
-<p>You are logged in as: <%= @current_user.email %></p>
+<p>You are logged in as:
+  <%= @current_user.email %></p>
+
+
+
+
+
+
+
+
+<% else %>
+  <div>
+    <%= link_to 'Sign up', signup_path, :class => 'btn' %>
+    <%= link_to 'Log in', login_path, :class => 'btn' %>
+  </div>
 <% end %>
+
+</section>
