--- a/app/views/bookmarks/index.html.erb
+++ b/app/views/bookmarks/index.html.erb
@@ -15,6 +15,8 @@
       <li><%= b.title %></li>
       <li><%= link_to b.url, b.url, :class => 'bookmark-link' %></li>
       <li class="bookmark-created"><%= b.created_at %></li>
+      <li class="bookmark-fav">Favourite? <%= b.is_favourite %></li>
+      
     </ul>
   </div>
   <% end %>
