--- a/app/views/bookmarks/index.html.erb
+++ b/app/views/bookmarks/index.html.erb
@@ -16,7 +16,8 @@
       <li><%= link_to b.url, b.url, :class => 'bookmark-link' %></li>
       <li class="bookmark-created"><%= b.created_at %></li>
       <li class="bookmark-fav">Favourite? <%= b.is_favourite %></li>
-      
+      <li class="bookmark-unread">Unread? <%= b.is_unread %></li>
+
     </ul>
   </div>
   <% end %>
