--- a/app/views/bookmarks/index.html.erb
+++ b/app/views/bookmarks/index.html.erb
@@ -6,6 +6,10 @@
   <p>Find me in app/views/bookmarks/index.html.erb</p>
 </div>
 
+<div class="btn-container">
+  <%= link_to 'New bookmark', new_bookmark_path, :class => 'btn' %>
+</div>
+
 <div class="bookmarks-container">
 
   <% @current_user.bookmarks.each do |b| %>
