Add edit bookmark functionality

--- a/app/views/bookmarks/edit.html.erb
+++ b/app/views/bookmarks/edit.html.erb
@@ -1,2 +1,9 @@
-<h1>Bookmarks#edit</h1>
-<p>Find me in app/views/bookmarks/edit.html.erb</p>
+<div class="main__heading">
+  <h2>Edit Bookmark</h2>
+</div>
+
+<div class="main__subheading">
+  <p>Find me in app/views/bookmarks/edit.html.erb</p>
+</div>
+
+<%= render :partial => 'form' %>
