--- a/app/views/bookmarks/index.html.erb
+++ b/app/views/bookmarks/index.html.erb
@@ -18,10 +18,11 @@
     <ul>
       <li><%= b.title %></li>
       <li><%= link_to b.url, b.url, :class => 'bookmark-link' %></li>
+      <li><%= b.description %></li>
       <li class="bookmark-created"><%= b.created_at %></li>
       <li class="bookmark-fav">Favourite? <%= b.is_favourite %></li>
       <li class="bookmark-unread">Unread? <%= b.is_unread %></li>
-
+      <li><%= link_to "Edit", edit_bookmark_path(b.id) %></li>
     </ul>
   </div>
   <% end %>
