--- a/app/views/bookmarks/index.html.erb
+++ b/app/views/bookmarks/index.html.erb
@@ -12,7 +12,7 @@
 
 <div class="bookmarks-container">
 
-  <% @current_user.bookmarks.each do |b| %>
+  <% @user.bookmarks.each do |b| %>
 
   <div class="bookmark-each">
     <ul>
