--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,2 +1,13 @@
-<h1>Categories#index</h1>
-<p>Find me in app/views/categories/index.html.erb</p>
+<div class="main__heading">
+  <h2>My Bookmarks</h2>
+</div>
+
+<div class="main__subheading">
+  <p>Find me in app/views/categories/index.html.erb</p>
+</div>
+
+<ul>
+  <% @user.categories.each do |category| %>
+  <li><%= link_to category.name, category %></li>
+  <% end %>
+</ul>
