Add link to categories on home page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,6 +15,9 @@
     <%= link_to 'My Bookmarks', bookmarks_path, :class => 'btn' %>
   </div>
 
+  <div class="btn-container">
+    <%= link_to 'My Categories', categories_path, :class => 'btn' %>
+  </div>
 
 
 <% else %>
