--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,8 +29,10 @@
       <h1>Sorter App 0.1</h1>
 
       <nav class="nav">
-        <ul>
-          <li><%= link_to "Home", root_path %></li>
+        <ul class="nav-list">
+          <li class="nav-list__item"><%= link_to "Home", root_path %></li>
+          <li class="nav-list__item"><%= link_to "About", about_path %></li>
+          <li class="nav-list__item"><%= link_to "Help", help_path %></li>
 
         </ul>
       </nav>
