Commit all before pushing to heroku

--- a/app/views/bookmarks/_form.html.erb
+++ b/app/views/bookmarks/_form.html.erb
@@ -1,11 +1,11 @@
 <%= form_for @bookmark, :html => {:class => 'form'} do |f| %>
 
 <% if @bookmark.errors.any? %>
-  <ol>
-    <% @bookmark.errors.full_messages.each do |msg| %>
-    <li><%= msg %></li>
-    <% end %>
-  </ol>
+<ol>
+  <% @bookmark.errors.full_messages.each do |msg| %>
+  <li><%= msg %></li>
+  <% end %>
+</ol>
 <% end %>
 
 <fieldset>
@@ -34,8 +34,13 @@
 </fieldset>
 
 <fieldset>
-  <%= f.label :category_id %>
-  <%= f.select :category_id, @current_user.categories.collect { |category| [category.name, category.id] } %>
+  <%= f.label :category_id, :class => 'label' %>
+
+  <% @current_user.categories.each do |category| %>
+  <%= f.check_box :category_id, { :class => 'checkbox' }, category.id %>
+  <%= f.label :category_id, category.name %>
+  <% end %>
+
 </fieldset>
 
 <fieldset class="btn-container">
