Implement is_read for each bookmark

--- a/app/views/bookmarks/_form.html.erb
+++ b/app/views/bookmarks/_form.html.erb
@@ -29,8 +29,8 @@
 </fieldset>
 
 <fieldset>
-  <%= f.label :is_unread, "Unread?", :class => 'label' %>
-  <%= f.check_box :is_unread, :class => 'checkbox' %>
+  <%= f.label :is_read, "Read?", :class => 'label' %>
+  <%= f.check_box :is_read, :class => 'checkbox' %>
 </fieldset>
 
 <fieldset>
