--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -19,6 +19,12 @@
     <%= link_to 'My Categories', categories_path, :class => 'btn' %>
   </div>
 
+  <div class="btn-container">
+    <%= link_to 'My Reading List', read_path, :class => 'btn' %>
+  </div>
+
+
+
 
 <% else %>
   <div>
