--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -6,8 +6,6 @@
   <p>Find me in app/views/categories/index.html.erb</p>
 </div>
 
-<ul>
   <% @user.categories.each do |category| %>
-  <li><%= link_to category.name, category %></li>
+  <h3 class="text-center"><%= link_to category.name, category %></h3>
   <% end %>
-</ul>
