--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -9,13 +9,14 @@
 
   <% @category.bookmarks.each do |b| %>
 
+<!--  TODO: Mark as read link -->
   <ul>
     <li><%= b.title %></li>
     <li><%= link_to b.url, b.url, :class => 'bookmark-link' %></li>
     <li><%= b.description %></li>
     <li class="bookmark-created"><%= b.created_at %></li>
     <li class="bookmark-fav">Favourite? <%= b.is_favourite %></li>
-    <li class="bookmark-unread">Unread? <%= b.is_unread %></li>
+    <li class="bookmark-read">Read? <%= b.is_read %></li>
     <li><%= link_to "Edit", edit_bookmark_path(b.id) %></li>
     <li><%= link_to "Delete", bookmark_path(b.id), :method => 'delete' %></li>
 
