Add new category functionality

--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,2 +1,6 @@
-<h1>Categories#new</h1>
-<p>Find me in app/views/categories/new.html.erb</p>
+<div class="main__heading">
+  <h2>New category</h2>
+
+  <%= render :partial => 'form' %>
+
+</div>
