Add update functionality to categories

--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -1,2 +1,8 @@
-<h1>Categories#edit</h1>
-<p>Find me in app/views/categories/edit.html.erb</p>
+<div class="main__heading">
+  <h2>Edit Category</h2>
+</div>
+
+<div class="main__subheading">
+</div>
+
+<%= render :partial => 'form' %>
