--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -12,5 +12,7 @@
 <h3 class="text-center"><%= link_to category.name, category %></h3>
 <div class="text-center">
   <%= link_to "Edit", edit_category_path(category.id) %>
+  <!--  NB. This will keep the bookmark (but it will be unassigned) -->
+  <%= link_to "Delete", category_path(category.id), :method => 'delete' %>
 </div>
 <% end %>
