--- a/app/views/application/_magic.html.erb
+++ b/app/views/application/_magic.html.erb
@@ -2,8 +2,8 @@
   <div class="bookmark">
 <div class="bookmark__details">
   <h4><%= bookmark.title %></h4>
-  <p><%= link_to bookmark.url, bookmark.url, :class => 'bookmark-link' %></p>
-  <p><%= bookmark.description %></p>
+  <p class="truncate"><%= link_to bookmark.url, bookmark.url, :class => 'bookmark-link' %></p>
+  <p class="truncate"><%= bookmark.description %></p>
   <p class="bookmark-created"><%= bookmark.created_at %></p>
   <p class="bookmark-fav">Favourite? <%= bookmark.is_favourite %></p>
   <p class="bookmark-read">Read? <%= bookmark.is_read %></p>
