Move trash link to beside timestamp

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -208,6 +208,10 @@ p {
 .bookmark-fav--is-notfav {
   color: $is-notfav;
 }
+
+.bookmark-trash {
+  margin-left: 10px;
+}
 // OTHER
 .login__error-heading {
   text-align: center;
