--- a/app/views/application/_magic.html.erb
+++ b/app/views/application/_magic.html.erb
@@ -20,13 +20,15 @@
 
     <i class="bookmark-timestamp"><%= bookmark.created_at %></i>
 
+    <%= link_to "", bookmark_path(bookmark.id), :method => 'delete', :class => 'bookmark-trash fa fa-trash' %>
+
+
   </p>
 </div>
 
 
 <div class="bookmark__controls">
   <%= link_to "", edit_bookmark_path(bookmark.id), :class => 'bookmark__button fa fa-pencil' %>
-  <%= link_to "", bookmark_path(bookmark.id), :method => 'delete', :class => 'bookmark__button fa fa-trash' %>
 
 </div>
 
