--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,34 +11,38 @@
   </head>
   <body>
     <header class="header">
-      <div class="header__user">
+      <div class="header-container">
+        <div class="header__user">
 
-        <ul class="nav-list nav-list--user-options">
-          <!--  Conditional links -->
-          <% if @current_user.present? %>
-          <li class="nav-list__item nav-list__item--header-users">Logged in as: <%= @current_user.email %></li>
-          <li class="nav-list__item nav-list__item--header-users"><%= link_to 'Edit profile', users_edit_path %></li>
-          <li class="nav-list__item nav-list__item--header-users"><%= link_to 'Log out', login_path, :method => :delete %></li>
+          <ul class="nav-list nav-list--user-options">
+            <!--  Conditional links -->
+            <% if @current_user.present? %>
+            <li class="nav-list__item nav-list__item--header-users">Logged in as:
+              <%= @current_user.email %></li>
+            <li class="nav-list__item nav-list__item--header-users"><%= link_to 'Edit profile', users_edit_path %></li>
+            <li class="nav-list__item nav-list__item--header-users"><%= link_to 'Log out', login_path, :method => :delete %></li>
 
-        <% else %>
-          <li class="nav-list__item nav-list__item--header-users"><%= link_to 'Sign up', signup_path %></li>
-          <li class="nav-list__item nav-list__item--header-users"><%= link_to 'Log in', login_path %></li>
-          <% end %>
-          <!--  End conditional links -->
-        </ul>
+          <% else %>
+            <li class="nav-list__item nav-list__item--header-users"><%= link_to 'Sign up', signup_path %></li>
+            <li class="nav-list__item nav-list__item--header-users"><%= link_to 'Log in', login_path %></li>
+            <% end %>
+            <!--  End conditional links -->
+          </ul>
 
+        </div>
+
+        <h1>Sorter App 0.1</h1>
+
+        <nav class="nav">
+          <ul class="nav-list">
+            <li class="nav-list__item"><%= link_to "Home", root_path %></li>
+            <li class="nav-list__item"><%= link_to "About", about_path %></li>
+            <li class="nav-list__item"><%= link_to "Help", help_path %></li>
+
+          </ul>
+        </nav>
       </div>
 
-      <h1>Sorter App 0.1</h1>
-
-      <nav class="nav">
-        <ul class="nav-list">
-          <li class="nav-list__item"><%= link_to "Home", root_path %></li>
-          <li class="nav-list__item"><%= link_to "About", about_path %></li>
-          <li class="nav-list__item"><%= link_to "Help", help_path %></li>
-
-        </ul>
-      </nav>
     </header>
 
     <main class="main">
