Add name to profile edit, and refactor user with _form

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -222,6 +222,11 @@ p {
   margin-left: 10px;
 }
 
+// PROFILE
+.profile-container {
+  text-align: center;
+  margin: 2em 0;
+}
 
 // OTHER
 .login__error-heading {
