--- a/app/views/application/_magic.html.erb
+++ b/app/views/application/_magic.html.erb
@@ -1,5 +1,5 @@
 <li>
-  <div class="bookmark">
+  <div class="bookmark-each">
 <div class="bookmark__details">
   <h4><%= link_to bookmark.title, bookmark_path(bookmark.id) %></h4>
   <p class="truncate"><%= link_to bookmark.url, bookmark.url, :class => 'bookmark-link' %></p>
