--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -22,6 +22,12 @@
     <%= link_to 'My Reading List', read_path, :class => 'btn' %>
   </div>
 
+  <div class="btn-container">
+    <%= link_to 'Explore', users_path, :class => 'btn' %>
+  </div>
+
+
+
 
 
 
