--- a/app/views/bookmarks/_form.html.erb
+++ b/app/views/bookmarks/_form.html.erb
@@ -20,7 +20,7 @@
 
 <fieldset>
   <%= f.label :description, "Description: ", :class => 'label' %>
-  <%= f.text_field :description, :class => 'input' %>
+  <%= f.text_area :description, :class => 'input' %>
 </fieldset>
 
 <fieldset>
