Implement dummy graph page

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -222,7 +222,10 @@ p {
 .bookmark--spacer-left {
   margin-left: 10px;
 }
-
+// GRAPHC
+.graph-container {
+  margin: 2em 0;
+}
 // PROFILE
 .profile-container {
   text-align: center;
